# translation-on-air

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: release.yml
Casks/: translation-on-air.rb
plans/260611-1333-macos-tauri-translate-app/: phase-01-scaffold-activation-policy-tray.md  phase-02-windows-frontend-shell.md  phase-03-global-shortcut-text-capture-accessibility.md  phase-04-translation-providers-secure-key.md  phase-05-react-popup-ui-ruby-rendering.md  phase-06-settings-window-persistence-rebind.md  phase-07-testing.md  phase-08-packaging-signing.md  plan.md
plans/260611-1333-macos-tauri-translate-app/research/: researcher-01-tauri-macos-system.md  researcher-02-llm-providers-furigana.md
src/: main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accessibility.rs  capture.rs  commands.rs  hotkey.rs  keychain.rs  lib.rs  main.rs  services.rs  settings.rs  tray.rs  windows.rs
src-tauri/src/providers/: claude_cli.rs  furigana.rs  mod.rs  openai.rs  prompt.rs  types.rs
src/popup/: furigana-text.test.tsx  furigana-text.tsx  lang-switcher.test.tsx  lang-switcher.tsx  popup-view.tsx  result-actions.tsx  use-translation.test.ts  use-translation.ts
src/settings/: general-section.tsx  hotkey-recorder.test.tsx  hotkey-recorder.tsx  provider-section.tsx  settings-view.tsx
src/shared/: tauri-api.ts  types.ts
src/styles/: global.css  popup.css  settings.css
